# Senior-Design

./: LICENSE  README.md  pyproject.toml
depedancy_testing/: blinkatest.py
env/: pyvenv.cfg
src/senior_design/: example.py  facial_detection.py  gpio_devices.py  gui.py  main.py  sensors.py  utilities.py
