[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Senior-Design"
version = "0.0.1"
authors = [
  { name="Brent Brightwell", email="bbrightw@asu.edu" },
]
description = "Build package for Rescue-21 Remote Security System"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BrentBrightwell/Senior-Design"
Issues = "https://github.com/BrentBrightwell/Senior-Design/issues"